src/test/resources/private/typechecking/fail/unknown/fail01_unknownClassAsMember.jova
class Helper {
}

class Test {
    private int a;
    private string b;
    private Unknown c;
    private Helper d;
}